Fix blurry text

--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -1,3 +1,7 @@
+html {
+  line-height: unset;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   padding-top: 4em;
